assets/css/app.css
/* ... */
      @media (hover: hover) {
        section#game #mode-container .setting-row a:hover:not(.disabled) {
          text-decoration: underline;
        }
      }
      section#game #mode-container .setting-row a[data-active=true] {
        text-decoration: underline;
      }
      section#game #mode-container .setting-row button#button-create-new {
        background-color: var(--disabled);
        border-radius: 4px;
        font-weight: normal;
        height: 22px;
        margin-left: 10px;
        padding: 13px 5px;
      }
        section#game #mode-container .setting-row button#button-create-new i {
          margin-right: 5px;
        }
    /* GAME->MODE-CONTAINER->GAMEMODE-CONTAINER */
    section#game #mode-container #gamemode-container {
      height: 20px;
    }

    /* GAME->MODE-CONTAINER->DAILY-DETAILS */
    section#game #mode-container #daily-details {
      color: var(--marker-color);
      display: none;
      font-size: 0.9rem;
      height: 20px;
      transform: scale(0);
    }
      section#game #mode-container #daily-details.show {
        display: block;
        transform: scale(1);
      }
        section#game #mode-container #daily-details .day {
          font-weight: 600;
        }
    /* GAME->MODE-CONTAINER->DIFFICULTY-CONTAINER */
    section#game #mode-container #difficulty-container {
      display: block;
      height: 20px;
      transform: scale(0);
    }
      section#game #mode-container #difficulty-container.show {
        transform: scale(1);
      }

  /* GUESS-CONTAINER */
  section#game #guess-container {
    align-content: center;
    align-items: center;
    display: flex;
    font-family: 'Changa', sans-serif;
    font-size: 2.75em;
    font-weight: 700;
    height: 60px;
    margin: 0 auto;
    max-width: 100%;
    position: relative;
    text-align: center;
    text-transform: uppercase;
    top: 0;
    vertical-align: middle;
    word-break: break-word;
    word-wrap: break-word;
  }

  @media (min-width: 350px) {
    section#game #guess-container {
      font-size: 3.5em;
    }
  }
  @media (min-width: 768px) {
    section#game #guess-container {
      font-size: 5em;
    }
  }
    section#game #guess-container #guess {
      font-size: 1em;
      line-height: 0.7em;
      letter-spacing: 0.03em;
      margin: 0 auto;
      overflow: hidden;
      position: relative;
      transition: all 50ms;
      top: 0;
      width: 100%;
    }
      section#game #guess-container #guess.valid {
        letter-spacing: 0.04em;
      }
        section#game #guess-container #guess.valid.first-guess {
          font-size: 1.1em;
        }

  /* BOARD-CONTAINER */
  section#game #board-container {
    align-items: center;
    display: flex;
    flex-grow: 1;
    justify-content: center;
    overflow: hidden;
  }
    section#game #board-container #board {
      box-sizing: border-box;
      display: grid;
      grid-template-rows: repeat(3, 1fr);
      grid-gap: 5px;
      padding: 10px;
    }
      section#game #board-container #board .row {
        display: grid;
        grid-gap: 5px;
        grid-template-columns: repeat(3, 1fr);
      }
        section#game #board-container #board .row:nth-of-type(1) {
          z-index: 20;
        }
        section#game #board-container #board .row:nth-of-type(2) {
          z-index: 19;
        }
        section#game #board-container #board .row:nth-of-type(3) {
          z-index: 18;
        }
      section#game #board-container #board .row .tile.animate__animated {
        box-shadow: 1px 1px 5px #c5c5c5;
      }

  /* SCORE-CONTAINER */
  section#game #score-container {
    font-size: 20px;
    height: 25px;
    text-align: center;
  }
    section#game #score-container #score-total {
      font-weight: 700;
    }

  /* HINT-CONTAINER */
  section#game #hint-container {
    display: block;
    margin: 0 auto;
    padding: 10px;
  }
      section#game #hint-container button {
        border: 1px solid var(--gray-dark);
        height: 30px;
      }
        @media (hover: hover) {
          section#game #hint-container button:hover {
            background-color: var(--gray-dark);
            border: 1px solid var(--black);
            color: var(--white);
          }
        }
        section#game #hint-container button:disabled {
          background-color: var(--gray);
          border: none;
          color: var(--disabled);
        }
        @media (hover: hover) {
          section#game #hint-container button:disabled:hover {
            background-color: var(--gray);
            border: none;
            color: var(--disabled);
          }
        }
        section#game #hint-container #hint-arena button#button-hint {
          float: left;
          font-size: 1.25em;
          font-weight: normal;
          letter-spacing: 0.25rem;
          margin-right: 0;
          min-width: 50px;
          padding: 5px 10px;
        }
          section#game #hint-container #hint-arena button#button-hint.not-a-button {
            background-color: transparent;
            border: 1px solid transparent;
            color: var(--black);
            cursor: text;
          }
        section#game #hint-container button#button-hint-reset {
          display: none;
          float: left;
          font-size: 1em;
          height: 30px;
          margin-left: 6px;
          max-width: 40px;
          max-height: 40px;
          padding: 0;
          width: 30px;
        }
          section#game #hint-container button#button-hint-reset.show {
            display: block;
          }

  /* KEYBOARD-CONTAINER */
  section#game #keyboard-container {
    margin: 0 8px;
    user-select: none; /* no selecting text */
  }
    section#game #keyboard-container .row {
      display: flex;
      margin: 0 auto 4px;
      /* Enable panning, pinch zoom, but not double-tap zoom */
      touch-action: manipulation;
      width: 100%;
    }
      section#game #keyboard-container .row:last-of-type {
        margin-bottom: 16px;
      }
/* ... */

